# newspenguin-rss-bot

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  docker-compose.yaml  fly.toml  justfile  sample.env
src/: db.rs  main.rs  scratchpad.rs  wasi_http.rs
wit/: world.wit
