[package]
name = "mastodon-newspenguin-bot"
author = ["Seungjin Kim <seungjin@duck.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "2.0.*" }
reqwest = { version = "0.11.*" }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.23" }
log = "0.4"
log4rs = "1"
serde_yaml = "0"
mongodb = "2.3.1"
bson = { version ="2", features = ["chrono-0_4"] }
serde = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }